Filter out invalid data